--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="wrap_content"
+	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:background="@color/green"
 	android:padding="8dip"
 	android:stretchColumns="0">
 	<TableRow>
 		<TableLayout android:background="@drawable/field"
-			android:layout_width="wrap_content"
-			android:padding="16dip">
+			android:padding="16dip"
+			android:stretchColumns="0">
 			<TableRow>
 				<TextView android:textStyle="bold"
 			    	android:textColor="@color/blue"
@@ -33,7 +33,8 @@
 	</TableRow>
 	<TableRow>
 		<TableLayout android:background="@drawable/field"
-			android:padding="16dip">
+			android:padding="16dip"
+			android:stretchColumns="0">
 			<TableRow>
 				<TextView android:id="@+id/label_CID"
 			    	android:textColor="@color/blue"
