--- a/res/layout/network_row.xml
+++ b/res/layout/network_row.xml
@@ -3,7 +3,10 @@
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:background="@color/green"
-		android:padding="8dip">
+	android:paddingTop="4dip"
+	android:paddingBottom="4dip"
+	android:paddingLeft="8dip"
+	android:paddingRight="8dip">
 	<TableLayout android:background="@drawable/field"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
@@ -16,9 +19,7 @@
 				android:textSize="18dip"/>
 	    </TableRow>
 		<TableRow>
-			<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
+			<TableLayout
 				android:stretchColumns="0">
 				<TableRow>
 					<TextView android:textColor="@color/bluedk"
@@ -27,6 +28,8 @@
 					<TextView android:id="@+id/network_row_BSSID"
 						android:textColor="@color/bluedk"
 						android:gravity="right"
+						android:text="00.11.22.33.44.55"
+						android:color="@color/blue"
 						android:textSize="14dip"/>
 	  		  	</TableRow>
 			</TableLayout>
