--- a/res/layout/network_row.xml
+++ b/res/layout/network_row.xml
@@ -3,10 +3,7 @@
 	android:layout_width="wrap_content"
 	android:layout_height="wrap_content"
 	android:background="@color/green"
-	android:paddingTop="4dip"
-	android:paddingBottom="4dip"
-	android:paddingLeft="8dip"
-	android:paddingRight="8dip">
+	android:padding="4dip">
 	<TableLayout android:background="@drawable/field"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
