--- a/res/layout/cells_list.xml
+++ b/res/layout/cells_list.xml
@@ -4,7 +4,8 @@
 	android:layout_height="wrap_content">
 	<ListView android:id="@android:id/list"
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"/>
+		android:layout_height="wrap_content"
+		android:background="@color/green"/>
 	<TextView android:id="@android:id/empty"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
