--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2,7 +2,7 @@
 <resources>
 	<string-array name="scan_interval_entries">
 		<item>1 minute</item>
-		<item>5 minutes</item>
+		<item>5 minutes (default)</item>
 		<item>10 minutes</item>
 		<item>15 minutes</item>
 		<item>30 minutes</item>
