--- a/res/layout/cell_row.xml
+++ b/res/layout/cell_row.xml
@@ -4,18 +4,18 @@
 	android:layout_height="wrap_content"
 	android:stretchColumns="0"
 	android:padding="4dip"
-	android:background="@color/green">
+	android:background="@color/background">
 	<TableRow>
 		<TableLayout android:background="@drawable/field"
 			android:stretchColumns="0"
 			android:padding="16dip">
 			<TableRow>
 				<TextView android:textStyle="bold"
-					android:textColor="@color/blue"
+					android:textColor="@color/text_primary"
 					android:textSize="18dip"
 					android:text="@string/label_CID"/>
 				<TextView android:id="@+id/cell_row_CID"
-					android:textColor="@color/blue"
+					android:textColor="@color/text_primary"
 					android:gravity="right"
 					android:textSize="18dip"/>
 			</TableRow>
