--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,7 +19,7 @@
  *  Bryan Emmanuel piusvelte@gmail.com
 -->
 <resources>
-	<color name="background">#bac2c9</color>
+	<color name="background">#d2e2e9</color>
 	<color name="text_primary">#427279</color>
 	<color name="text_secondary">#528289</color>
 </resources>
