--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -37,4 +37,12 @@
 		<item>1800000</item>
 		<item>3600000</item>
 	</string-array>
+	<string-array name="filter_entries">
+		<item>All</item>
+		<item>In range</item>
+	</string-array>
+	<string-array name="filter_values">
+		<item>0</item>
+		<item>1</item>
+	</string-array>
 </resources>
