--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -40,9 +40,11 @@
 	<string-array name="filter_entries">
 		<item>All</item>
 		<item>In range</item>
+		<item>Out of range</item>
 	</string-array>
 	<string-array name="filter_values">
 		<item>0</item>
 		<item>1</item>
+		<item>2</item>
 	</string-array>
 </resources>
