--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -38,9 +38,9 @@
 		<item>3600000</item>
 	</string-array>
 	<string-array name="filter_entries">
-		<item>All</item>
-		<item>Accessible</item>
-		<item>Inaccessible</item>
+		<item>all</item>
+		<item>within area</item>
+		<item>out of area</item>
 	</string-array>
 	<string-array name="filter_values">
 		<item>0</item>
