--- a/res/layout/cell_row.xml
+++ b/res/layout/cell_row.xml
@@ -42,11 +42,21 @@
 				<TextView android:textStyle="bold"
 					android:textColor="@color/text_primary"
 					android:textSize="18dip"
+					android:text="@string/label_LAC"/>
+				<TextView android:id="@+id/cell_row_LAC"
+					android:textColor="@color/text_primary"
+					android:gravity="right"
+					android:textSize="14dip"/>
+			</TableRow>
+			<TableRow>
+				<TextView android:textStyle="bold"
+					android:textColor="@color/text_primary"
+					android:textSize="18dip"
 					android:text="@string/status"/>
 				<TextView android:id="@+id/cell_row_status"
 					android:textColor="@color/text_primary"
 					android:gravity="right"
-					android:textSize="18dip"/>
+					android:textSize="14dip"/>
 			</TableRow>
 		</TableLayout>
     </TableRow>
