ui-layout-battery

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -26,17 +26,17 @@
 	android:stretchColumns="0">
 	<TableRow>
 		<TableLayout android:background="@drawable/field"
-			android:padding="16dip"
+			android:padding="12dip"
 			android:stretchColumns="0">
 			<TableRow>
 				<TextView android:textColor="@color/text_primary"
-					android:textSize="18dip"
+					android:textSize="16dip"
 					android:text="@string/label_WIFI"/>
 				<TextView android:id="@+id/field_wifiState"
 					android:textStyle="bold"
 			    	android:textColor="@color/text_primary"
 					android:gravity="right"
-					android:textSize="18dip"
+					android:textSize="16dip"
 					android:text="@string/scanning"/>
 		    </TableRow>
 			<TableRow>
@@ -53,30 +53,29 @@
 	</TableRow>
 	<TableRow>
 		<TableLayout android:background="@drawable/field"
-			android:padding="16dip"
+			android:padding="12dip"
 			android:stretchColumns="0">
 			<TableRow>
 				<TextView android:id="@+id/label_CID"
 			    	android:textColor="@color/text_primary"
-					android:textSize="18dip"
+					android:textSize="16dip"
 					android:text="@string/label_CID"/>
 				<TextView android:id="@+id/field_CID"
 					android:textStyle="bold"
 			    	android:textColor="@color/text_primary"
 					android:gravity="right"
-					android:textSize="18dip"
+					android:textSize="16dip"
 					android:text="@string/scanning"/>
 		    </TableRow>
 			<TableRow>
 				<TextView android:id="@+id/label_LAC"
-			    	android:textColor="@color/text_primary"
-					android:textSize="18dip"
+			    	android:textColor="@color/text_secondary"
+					android:textSize="14dip"
 					android:text="@string/label_LAC"/>
 				<TextView android:id="@+id/field_LAC"
-					android:textStyle="bold"
-			    	android:textColor="@color/text_primary"
+			    	android:textColor="@color/text_secondary"
 					android:gravity="right"
-					android:textSize="18dip"
+					android:textSize="14dip"
 					android:text="@string/scanning"/>
 		    </TableRow>
 			<TableRow>
@@ -116,17 +115,17 @@
 	</TableRow>
 	<TableRow>
 		<TableLayout android:background="@drawable/field"
-			android:padding="16dip"
+			android:padding="12dip"
 			android:stretchColumns="0">
 			<TableRow>
 				<TextView android:textColor="@color/text_primary"
-					android:textSize="18dip"
+					android:textSize="16dip"
 					android:text="@string/battery_remaining"/>
 				<TextView android:id="@+id/field_battery"
 					android:textStyle="bold"
 			    	android:textColor="@color/text_primary"
 					android:gravity="right"
-					android:textSize="18dip"
+					android:textSize="16dip"
 					android:text="@string/scanning"/>
 		    </TableRow>
 		</TableLayout>
